opam-version: "2.0"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "http://github.com/rizo/ppx_make_record"
license: "MIT"
bug-reports: "https://github.com/pusher/ppx_make_record/issues"
synopsis: "Convenient record syntax for ppx_deriving make plugin"
tags: ["org:rizo" "ppx" "syntax"]

depends: [
  "ocaml" {>= "4.03"}
  "dune" {build}
  "ocaml-migrate-parsetree"
  "ppx_tools_versioned"
]

build: [
  [ "jbuilder" "build" "-p" name "-j" jobs "@install" ]
]
