opam-version: "2.0"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "http://github.com/rizo/ppx_obj_make"
license: "MIT"
bug-reports: "https://github.com/pusher/ppx_obj_make/issues"
synopsis: "Repurpose object literals"
tags: ["org:rizo" "ppx" "syntax"]

depends: [
  "ocaml" {>= "4.03"}
  "dune" {build}
  "ocaml-migrate-parsetree"
  "ppx_tools_versioned"
]

build: [
  [ "jbuilder" "build" "-p" name "-j" jobs "@install" ]
]
